# slack-stats

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/slack_stats/: __init__.py  bot_count.py
